TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "131288296718448" [label="Start"];
  "131288296718448" -> "131288296720176";
  "131288296720176" [label="Code"];
  "131288296720176" -> "131288296720320";
  "131288296720320" [label="Function"];
  "131288296720320" -> "131288296720416";
  "131288296720320" -> "131288296720464";
  "131288296720320" -> "131288296720512";
  "131288296720416" [label="main"];
  "131288296720464" [label="Parameters"];
  "131288296720512" [label="Code"];
  "131288296720512" -> "131288296720608";
  "131288296720512" -> "131288296720656";
  "131288296720608" [label="Code"];
  "131288296720608" -> "131288296720704";
  "131288296720704" [label="Declaration"];
  "131288296720704" -> "131288296720800";
  "131288296720704" -> "131288296720848";
  "131288296720800" [label="x"];
  "131288296720848" [label="1"];
  "131288296720656" [label="Code"];
  "131288296720656" -> "131288296720896";
  "131288296720896" [label="Declaration"];
  "131288296720896" -> "131288296720992";
  "131288296720896" -> "131288296721040";
  "131288296720992" [label="x"];
  "131288296721040" [label="2"];
}
